--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,6 +8,10 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pages: write
+      id-token: write
     
     steps:
     - name: Checkout
@@ -23,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         cd client
-        npm ci
+        npm install
         
     - name: Build
       run: |
@@ -37,4 +41,5 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./client/build
+        cname: ''
 
