Fix GitHub Pages deployment to serve React app instead of README

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,4 +42,5 @@ jobs:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./client/build
         cname: ''
+        force_orphan: true
 
