--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,7 +9,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pages: write
       id-token: write
     
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         cd client
-        npm install
+        npm install --legacy-peer-deps
         
     - name: Build
       run: |
